--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
           <a class="btn"
              href="./AP%20ATR%20Trail%20(MT5)/"
              target="_blank" rel="noopener">
-            Download Free
+            Download Free MT5
           </a>
         </div>
       </div>
