--- a/index.html
+++ b/index.html
@@ -614,17 +614,21 @@
         </div>
       </div>
 
-      <div class="card">
-        <h3>MA Cross Alerts</h3>
-        <div class="tags">
-          <span class="tag">Indicator</span><span class="tag">Signals</span>
-        </div>
-        <p>Moving-average cross alerts with on-chart labels and optional notifications.</p>
-        <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148553" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./MA%20Cross%20Alerts/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
+         <div class="card">
+     <h3>MA Cross Alerts</h3>
+     <div class="tags">
+       <span class="tag">Indicator</span><span class="tag">Signals</span>
+     </div>
+     <p>Moving-average cross alerts with on-chart labels and optional notifications.</p>
+     <div class="btns">
+       <a class="btn"
+          href="./MA%20Cross%20Alerts/"
+          target="_blank"
+          rel="noopener">
+         Download Free (MT5)
+       </a>
+     </div>
+   </div>
 
       <div class="card">
         <h3>Pro Countdown Candle</h3>
