--- a/index.html
+++ b/index.html
@@ -630,17 +630,21 @@
      </div>
    </div>
 
-      <div class="card">
-        <h3>Pro Countdown Candle</h3>
-        <div class="tags">
-          <span class="tag">Indicator</span><span class="tag">Utility</span>
-        </div>
-        <p>Minimal candle time-left display that respects chart theme and stays light on resources.</p>
-        <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148541" target="_blank" rel="noopener">Download</a>
-          <a class="btn ghost" href="./Pro%20Countdown%20Candle/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
+           <div class="card">
+       <h3>Pro Countdown Candle</h3>
+       <div class="tags">
+         <span class="tag">Indicator</span><span class="tag">Utility</span>
+       </div>
+       <p>Minimal candle time-left display that respects chart theme and stays light on resources.</p>
+       <div class="btns">
+         <a class="btn"
+            href="./Pro%20Countdown%20Candle/"
+            target="_blank"
+            rel="noopener">
+           Download Free (MT5)
+         </a>
+       </div>
+     </div>
 
       <div class="card">
         <h3>AP Previous Levels</h3>
