--- a/index.html
+++ b/index.html
@@ -646,17 +646,21 @@
        </div>
      </div>
 
-      <div class="card">
-        <h3>AP Previous Levels</h3>
-        <div class="tags">
-          <span class="tag">Indicator</span><span class="tag">Levels</span>
-        </div>
-        <p>Marks prior session/day/week levels with neutral styling for context.</p>
-        <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148635" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./AP%20Previous%20levels/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
+           <div class="card">
+       <h3>AP Previous Levels</h3>
+       <div class="tags">
+         <span class="tag">Indicator</span><span class="tag">Levels</span>
+       </div>
+       <p>Marks prior session/day/week levels with neutral styling for context.</p>
+       <div class="btns">
+         <a class="btn"
+            href="./AP%20Previous%20levels/"
+            target="_blank"
+            rel="noopener">
+           Download Free (MT5)
+         </a>
+       </div>
+     </div>
 
       <div class="card">
         <h3>Daily Open Line</h3>
