--- a/index.html
+++ b/index.html
@@ -662,17 +662,21 @@
        </div>
      </div>
 
-      <div class="card">
-        <h3>Daily Open Line</h3>
-        <div class="tags">
-          <span class="tag">Indicator</span><span class="tag">Utility</span>
-        </div>
-        <p>Draws the daily open with session-aware styling. Lightweight and neutral.</p>
-        <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/148547" target="_blank" rel="noopener">Get on MQL5</a>
-          <a class="btn ghost" href="./Daily%20open%20line/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
+           <div class="card">
+       <h3>Daily Open Line</h3>
+       <div class="tags">
+         <span class="tag">Indicator</span><span class="tag">Utility</span>
+       </div>
+       <p>Draws the daily open with session-aware styling. Lightweight and neutral.</p>
+       <div class="btns">
+         <a class="btn"
+            href="./Daily%20open%20line/"
+            target="_blank"
+            rel="noopener">
+           Download Free (MT5)
+         </a>
+       </div>
+     </div>
 
       <div class="card">
         <h3>AP VWAP Bands Pro MT5</h3>
