--- a/index.html
+++ b/index.html
@@ -678,17 +678,21 @@
        </div>
      </div>
 
-      <div class="card">
-        <h3>AP VWAP Bands Pro MT5</h3>
-        <div class="tags">
-          <span class="tag">Indicator</span><span class="tag">BTC</span>
-        </div>
-        <p>Session-based VWAP with optional ±1/±2 bands for balanced intraday reference.</p>
-        <div class="btns">
-          <a class="btn" href="https://www.mql5.com/en/market/product/150646" target="_blank" rel="noopener">Download</a>
-          <a class="btn ghost" href="./AP%20Btc%20Session%20VWAP%20Bands%20MT5/" target="_blank" rel="noopener">Docs</a>
-        </div>
-      </div>
+           <div class="card">
+       <h3>AP VWAP Bands Pro MT5</h3>
+       <div class="tags">
+         <span class="tag">Indicator</span><span class="tag">BTC</span>
+       </div>
+       <p>Session-based VWAP with optional ±1/±2 bands for balanced intraday reference.</p>
+       <div class="btns">
+         <a class="btn"
+            href="./AP%20Btc%20Session%20VWAP%20Bands%20MT5/"
+            target="_blank"
+            rel="noopener">
+           Download Free (MT5)
+         </a>
+       </div>
+     </div>
 
       <div class="card">
         <h3>ICT Liquidity Sweep (FVG) MT5</h3>
