--- a/index.html
+++ b/index.html
@@ -694,21 +694,21 @@
        </div>
      </div>
 
-      <div class="card">
-        <h3>ICT Liquidity Sweep (FVG) MT5</h3>
-        <div class="tags">
-          <span class="tag">Indicator</span><span class="tag">BTC/FX</span>
-        </div>
-        <p>Marks prior HI/LO sweeps and fair-value gaps with clean, optional alerts.</p>
-        <div class="btns">
-          <a class="btn ghost"
-             href="https://github.com/noo0oobep-eng/ap-tools/tree/main/ICT_LiquiditySweep_FVG_MT5"
-             target="_blank" rel="noopener">
-            Docs
-          </a>
-        </div>
-      </div>
-    </div>
+           <div class="card">
+       <h3>ICT Liquidity Sweep (FVG) MT5</h3>
+       <div class="tags">
+         <span class="tag">Indicator</span><span class="tag">BTC/FX</span>
+       </div>
+       <p>Marks prior HI/LO sweeps and fair-value gaps with clean, optional alerts.</p>
+       <div class="btns">
+         <a class="btn"
+            href="./ICT_LiquiditySweep_FVG_MT5/"
+            target="_blank"
+            rel="noopener">
+           Download Free (MT5)
+         </a>
+       </div>
+     </div>
   </section>
 
   <!-- Utilities -->
