--- a/ICT_LiquiditySweep_FVG_MT5/index.html
+++ b/ICT_LiquiditySweep_FVG_MT5/index.html
@@ -1,1 +1,171 @@
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>ICT Liquidity Sweep (FVG) MT5 — Docs</title>
+<style>
+:root{
+  --bg:#0b0f14;
+  --card:#121822;
+  --text:#e8eef6;
+  --muted:#9fb0c3;
+  --accent:#58a6ff;
+  --border:#1d2633;
+}
+*{box-sizing:border-box}
+body{
+  margin:0;
+  background:var(--bg);
+  color:var(--text);
+  font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Arial;
+}
+.wrap{max-width:900px;margin:0 auto;padding:22px}
+h1{margin:12px 0 6px;font-size:28px}
+.lead{color:var(--muted);margin:0 0 16px}
+.card{
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:14px;
+  padding:18px;
+  margin:16px 0;
+}
+.btns{
+  display:flex;
+  gap:10px;
+  flex-wrap:wrap;
+  margin:12px 0;
+}
+a.btn,
+button.btn{
+  display:inline-block;
+  text-decoration:none;
+  color:#000;
+  background:var(--accent);
+  padding:8px 12px;
+  border-radius:10px;
+  font-weight:600;
+  border:none;
+  cursor:pointer;
+}
+a.btn:hover,
+button.btn:hover{
+  filter:brightness(1.05);
+}
+a.ghost,
+.btn.ghost{
+  background:transparent;
+  color:var(--accent);
+  border:1px solid var(--accent);
+}
+ul,ol{margin:8px 0 0 18px}
+small,.muted{color:var(--muted)}
+hr{border:none;border-top:1px solid #1d2633;margin:22px 0}
+
+/* email form */
+label{
+  display:block;
+  margin-bottom:6px;
+  font-size:14px;
+  color:var(--muted);
+}
+input[type="email"]{
+  width:100%;
+  max-width:320px;
+  padding:8px 10px;
+  border-radius:8px;
+  border:1px solid var(--border);
+  background:#0e141d;
+  color:var(--text);
+  margin-bottom:10px;
+}
+form small{font-size:12px;}
+</style>
+</head>
+<body>
+<div class="wrap">
+  <a class="ghost btn" href="../">← Back to Home</a>
+  <h1>ICT Liquidity Sweep (FVG) MT5</h1>
+  <p class="lead">
+    Marks prior HI/LO sweeps and fair-value gaps with clean, optional alerts. Built for BTC/FX on MT5.
+  </p>
+
+  <!-- Email + download card -->
+  <div class="card">
+    <h3>Get ICT Liquidity Sweep (FVG) MT5 — free</h3>
+    <form id="download-form"
+          action="https://formspree.io/f/xkgkrzye"
+          method="POST">
+      <label for="email">
+        Enter your email to get the .zip download:
+      </label>
+      <input id="email"
+             name="email"
+             type="email"
+             required
+             placeholder="you@example.com" />
+      <input type="hidden" name="product" value="ICT Liquidity Sweep (FVG) MT5">
+      <div class="btns">
+        <button class="btn" type="submit">Download Free (MT5)</button>
+      </div>
+      <small class="muted"></small>
+    </form>
+  </div>
+
+  <div class="card">
+    <h3>Full source & docs</h3>
+    <p>Open-source code and detailed documentation are available on GitHub.</p>
+    <div class="btns">
+      <a class="btn ghost"
+         href="https://github.com/noo0oobep-eng/ap-tools/tree/main/ICT_LiquiditySweep_FVG_MT5"
+         target="_blank"
+         rel="noopener">
+        View on GitHub
+      </a>
+    </div>
+  </div>
+
+  <div class="card">
+    <h3>Files in this folder</h3>
+    <ul>
+      <li><code>ICT_Liquidity_Sweep_FVG_MT5.zip</code> — indicator + presets (downloaded via the form)</li>
+      <li><code>Version.txt</code> — version tag</li>
+      <li>Optional: screenshots or extra notes</li>
+    </ul>
+  </div>
+
+  <hr />
+  <p class="muted">
+    Indicator only (no auto-trading). No profit promises.  
+    Support: use GitHub issues or the contact options on the AP Trading Tools website.
+  </p>
+</div>
+
+<script>
+  (function () {
+    const form = document.getElementById('download-form');
+    if (!form) return;
+
+    form.addEventListener('submit', async function (e) {
+      e.preventDefault();
+
+      const data = new FormData(form);
+
+      try {
+        await fetch(form.action, {
+          method: 'POST',
+          body: data,
+          headers: { 'Accept': 'application/json' }
+        });
+      } catch (err) {
+        // ignore errors – still give the download
+      }
+
+      // Trigger the zip download (same folder as this index.html)
+      window.location.href = 'ICT_Liquidity_Sweep_FVG_MT5.zip';
+    });
+  })();
+</script>
+</body>
+</html>
 
