--- a/index.html
+++ b/index.html
@@ -300,6 +300,25 @@
     <h2>Featured EAs</h2>
     <div class="grid3">
       <div class="card">
+  <h3>AP Starter Pack (MT5)</h3>
+  <div class="tags">
+    <span class="tag">Bundle</span><span class="tag">Indicators</span><span class="tag">Free</span>
+  </div>
+  <p>
+    Starter bundle of my free MT5 tools: session boxes, spread radar, round numbers grid, ATR trail,
+    MA cross alerts, countdown candle, previous levels, daily open line, VWAP bands, and liquidity sweep.
+  </p>
+  <div class="btns">
+    <a class="btn"
+       href="./AP_Starter_Pack/"
+       target="_blank"
+       rel="noopener">
+      Download Free Starter Pack (MT5)
+    </a>
+  </div>
+</div>
+
+      <div class="card">
         <h3>AP London Session Breakout (MT5)</h3>
         <div class="tags">
           <span class="tag">Breakout</span><span class="tag">Time-box</span><span class="tag">MT5</span>
